Changes in 0.94:
  o Bug Fixes
    * A bug in getNewTroveList() that could cause duplicate
      troves to be returned has been fixed.

  o Client changes:
    * The query/repquery/showcs command line options have been
      reworked.  See the conary man page for details.

Changes in 0.93:
  o Bug Fixes
    * A bug in the "conary verify" code sometimes resulted in an
      unhandled TroveIntegrity exception when local modifications were
      made on the system. (bug #507)
    * Usernames and passwords with RFC 2396 reserved characters (such
      as '/') are now handled properly. (bug #587)

  o Server changes
    * Standalone server reports warnings for unsupported configuration options
      instead of exiting with a traceback.
    * Compatibility for repositoryDir has been removed.
    * A bug caused queries for multiple flavors of the same trove
      to return incorrect results has been fixed.
    * Apache hooks now ignore IOErrors when writing changesets to the
      client.  These normally occur when the client closes the
      connection before all the data is sent.

  o Client changes
    * SHA1 checksums are now computed for source checkins and local
      change set commits.
    * Flavor affinity is now more relaxed when updating troves.  For
      example, if you have a trove with flavor that requires sse2 but
      your system flavor is ~!sse2, conary will only prefer troves
      with sse2 enabled instead of requiring it.

  o Build changes
    * PythonSetup() now correctly requires python-setuptools:python
      instead of python-setuptools:runtime.
    * Automatic python dependency provision now searches more directories
      to better support multilib python.
    * Conary now defaults to building in ~/conary/builds instead of
      /var/tmp/conary/builds, and caching in ~/conary/cache instead
      of /var/cache/conary.

Changes in 0.92:
  o Package Building Changes:
    * Conary policy has been split out into the conary-policy package.